@@ -8,26 +8,26 @@ RMD160 a8e6e3f2bc014979fd269a027835a65520c12417 files/emacs-cvs-freebsd-sparc.pa
 SHA256 43584ea923e6c7221e69d1d6a14d55d386565c5decd067a62acc58af522c803b files/emacs-cvs-freebsd-sparc.patch 475
 DIST emacs-22.0.96.tar.gz 37846686 RMD160 d980f7f8ec6c646a9b741718284b081987f9d73c SHA1 e2942bdbf693a0814fcc3b34d5ae55765d5d4ad8 SHA256 a9fa904e00e09d8b68e701edda208bd274053d26d0b50d97d6c977084e5c307d
 DIST emacs-22.0.97.tar.gz 37900456 RMD160 3bd5abe6fdf4e1574b6fda4b2e85cfbf171fbab4 SHA1 60a50581ac93fc850225a929cc0c04dec0e51f36 SHA256 1b2cd679a1cbb1b6971291beac5d68ae55be538691c1fc8164f936899b8a913b
-EBUILD emacs-cvs-22.0.96-r1.ebuild 7869 RMD160 221ce33047757f143e7193f1b5aba94fd2910479 SHA1 8f504134899a147e009fd68b01db61c06b4ec906 SHA256 d2fa037c97956edd9f0269b7802e83290725033965e6823d3aa021573c57c68e
-MD5 c799181b18e209f9c44e39aafb348d74 emacs-cvs-22.0.96-r1.ebuild 7869
-RMD160 221ce33047757f143e7193f1b5aba94fd2910479 emacs-cvs-22.0.96-r1.ebuild 7869
-SHA256 d2fa037c97956edd9f0269b7802e83290725033965e6823d3aa021573c57c68e emacs-cvs-22.0.96-r1.ebuild 7869
-EBUILD emacs-cvs-22.0.97.ebuild 7306 RMD160 d320825d0956483929b1645fba2da5b5e655c449 SHA1 634f41747537203c51aad7280919896931d3d4c9 SHA256 1e7461b6c2cb8033a9e5c7e3078afab49aaeed2c3ad01fb95fe13d387f8cff12
-MD5 23ff9251ec9b3c1cd10c05f393e33844 emacs-cvs-22.0.97.ebuild 7306
-RMD160 d320825d0956483929b1645fba2da5b5e655c449 emacs-cvs-22.0.97.ebuild 7306
-SHA256 1e7461b6c2cb8033a9e5c7e3078afab49aaeed2c3ad01fb95fe13d387f8cff12 emacs-cvs-22.0.97.ebuild 7306
-EBUILD emacs-cvs-22.0.9999-r9.ebuild 7461 RMD160 2cbaef2aeabe8919657aeb7cc14ad62d4d11c3c7 SHA1 68fcec5778bfa8ee73282ee311260b07e6c57bfc SHA256 126dc5ec1585927d00647233dcb696621560d40fdc7d6d9265a3e5f67781516c
-MD5 f13486dfff64b9fe773da83495311680 emacs-cvs-22.0.9999-r9.ebuild 7461
-RMD160 2cbaef2aeabe8919657aeb7cc14ad62d4d11c3c7 emacs-cvs-22.0.9999-r9.ebuild 7461
-SHA256 126dc5ec1585927d00647233dcb696621560d40fdc7d6d9265a3e5f67781516c emacs-cvs-22.0.9999-r9.ebuild 7461
-EBUILD emacs-cvs-23.0.0-r5.ebuild 7683 RMD160 79cf0e3d4537e4663d492179705c00c8f019cefe SHA1 91820acbac3d3572630f3d8502272f4d6589614f SHA256 082e392ec9b3c5b2b70f854329cfc303e2dffa263ddf65e5216ed013b0c044be
-MD5 e0c13f46dcc2faff4d5403bb13c72d01 emacs-cvs-23.0.0-r5.ebuild 7683
-RMD160 79cf0e3d4537e4663d492179705c00c8f019cefe emacs-cvs-23.0.0-r5.ebuild 7683
-SHA256 082e392ec9b3c5b2b70f854329cfc303e2dffa263ddf65e5216ed013b0c044be emacs-cvs-23.0.0-r5.ebuild 7683
-MISC ChangeLog 9340 RMD160 eba24ba887e284e277f0ece39c7ac3b82a4a1838 SHA1 32cd9be53083762f292e69f9a9ae99eee1f5334f SHA256 4a8420955b3e8e8799a39b7e164855f9e441e47c57751f87d01b72c74f80c107
-MD5 7949dc28ed040d73ad3fbf84704180c0 ChangeLog 9340
-RMD160 eba24ba887e284e277f0ece39c7ac3b82a4a1838 ChangeLog 9340
-SHA256 4a8420955b3e8e8799a39b7e164855f9e441e47c57751f87d01b72c74f80c107 ChangeLog 9340
+EBUILD emacs-cvs-22.0.96-r1.ebuild 7883 RMD160 022973c95fdd5db73f7a22f6b705e89585c09760 SHA1 1577e9024e4eabf6fdcfc28df0e4d164f38e9925 SHA256 daf513fa9bbbb970c8e019c9d58dc9878bb4d7cd1e7779dc3df73d253ed8f95c
+MD5 ecc35bbcbb81730cccfc563f43200df2 emacs-cvs-22.0.96-r1.ebuild 7883
+RMD160 022973c95fdd5db73f7a22f6b705e89585c09760 emacs-cvs-22.0.96-r1.ebuild 7883
+SHA256 daf513fa9bbbb970c8e019c9d58dc9878bb4d7cd1e7779dc3df73d253ed8f95c emacs-cvs-22.0.96-r1.ebuild 7883
+EBUILD emacs-cvs-22.0.97.ebuild 7320 RMD160 133337acf99619b61b5cbc9f63cc8be13a32c6f3 SHA1 3417f5d4b23b45482aef4e36a62b3de8033e0682 SHA256 c03e55561b93895adc01e77f2eb00b0ab69db83eed764241191985732ca984bb
+MD5 88e09645d9717beef88ab6f3ebfd7eda emacs-cvs-22.0.97.ebuild 7320
+RMD160 133337acf99619b61b5cbc9f63cc8be13a32c6f3 emacs-cvs-22.0.97.ebuild 7320
+SHA256 c03e55561b93895adc01e77f2eb00b0ab69db83eed764241191985732ca984bb emacs-cvs-22.0.97.ebuild 7320
+EBUILD emacs-cvs-22.0.9999-r9.ebuild 7475 RMD160 ec5858908f1664149919fdd428f30a22d114b470 SHA1 a7bf51b96a8bf23f1c9ed6b6a420037cc5507d5d SHA256 b107529a9f23ce74c76a4c7a78333714d1a678082c18b8b8d97fc6ccca1d9377
+MD5 afe9e1204902448620a58bc4226ffc99 emacs-cvs-22.0.9999-r9.ebuild 7475
+RMD160 ec5858908f1664149919fdd428f30a22d114b470 emacs-cvs-22.0.9999-r9.ebuild 7475
+SHA256 b107529a9f23ce74c76a4c7a78333714d1a678082c18b8b8d97fc6ccca1d9377 emacs-cvs-22.0.9999-r9.ebuild 7475
+EBUILD emacs-cvs-23.0.0-r5.ebuild 7697 RMD160 2c3f1d9436aa0a10129d2cb89af70d39731ab72e SHA1 ac590ba20fab1ac883eecca0603483b845dfd5a1 SHA256 5a396eaa7e850b434085dd4ed709d2cc1b9dd0fa4a073ac594f010b23171501a
+MD5 02b2cd264ab38cf85d33dece42e13db2 emacs-cvs-23.0.0-r5.ebuild 7697
+RMD160 2c3f1d9436aa0a10129d2cb89af70d39731ab72e emacs-cvs-23.0.0-r5.ebuild 7697
+SHA256 5a396eaa7e850b434085dd4ed709d2cc1b9dd0fa4a073ac594f010b23171501a emacs-cvs-23.0.0-r5.ebuild 7697
+MISC ChangeLog 9548 RMD160 d48361a4c572f7862761b7a43135bb0f26867c13 SHA1 2bdffd9ff9bacb42868b0165a1ffc865ea2d3151 SHA256 76d7d985deb04854da12b66c9ff42b50a9c273c499779b96a6a0d0bf28687bfe
+MD5 18ba530bd78b7bc4cebd3f417098af12 ChangeLog 9548
+RMD160 d48361a4c572f7862761b7a43135bb0f26867c13 ChangeLog 9548
+SHA256 76d7d985deb04854da12b66c9ff42b50a9c273c499779b96a6a0d0bf28687bfe ChangeLog 9548
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
