@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Apr 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
+  emacs-cvs-22.0.96-r1.ebuild, emacs-cvs-22.0.97.ebuild,
+  emacs-cvs-22.0.9999-r9.ebuild, emacs-cvs-23.0.0-r5.ebuild:
+  Fix whitespace in elisp sitefile.
+
   04 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
   -files/emacs-cvs-21.3.50-nofink.diff, emacs-cvs-22.0.97.ebuild,
   emacs-cvs-22.0.9999-r9.ebuild, emacs-cvs-23.0.0-r5.ebuild:
